--- a/wp-content/themes/henderson/static/less/typography.less
+++ b/wp-content/themes/henderson/static/less/typography.less
@@ -40,7 +40,7 @@
     font-weight: 600;
 }
 
-p,li,a,td,span, legend, label, .wpcf7-response-output {
+p,li,a,td,span, legend, label, div, .wpcf7-response-output {
     font-family: var(--font-primary);
     color: var(--ter-100);
     line-height: var(--body-line-height);
