--- a/wp-content/themes/henderson/static/less/variables.less
+++ b/wp-content/themes/henderson/static/less/variables.less
@@ -29,15 +29,8 @@ VARIABLES
 
 
 .grad-bg {
-    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#000000+0,000000+100&0.55+0,0.55+100;Neutral+Density */
-    background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.55) 0%, rgba(0, 0, 0, 0.55) 100%);
-    /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.55) 0%, rgba(0, 0, 0, 0.55) 100%);
-    /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.55) 0%, rgba(0, 0, 0, 0.55) 100%);
-    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#8c000000', endColorstr='#8c000000', GradientType=0);
-    /* IE6-9 */
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#12365b+0,12365b+100&0+0,1+100 */
+    background: linear-gradient(to bottom,  rgba(18,54,91,0) 0%,rgba(18,54,91,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
 
 :root {
