--- a/wp-content/themes/henderson/views/partials/html-header.twig
+++ b/wp-content/themes/henderson/views/partials/html-header.twig
@@ -14,18 +14,18 @@
             <link rel="author" href="{{ site.theme.link}}/humans.txt" />
             <link rel="pingback" href="{{ site.pingback_url}}" />
             <link rel="profile" href="http://gmpg.org/xfn/11">
-            {# <!-- Add the slick-theme.css if you want default styling -->
+            <!-- Add the slick-theme.css if you want default styling -->
             <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
             <!-- Add the slick-theme.css if you want default styling -->
-            <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/> #}
-             {# <!-- jQuery 1.8 or later, 33 KB --> // uncomment it for fotorama and fancybox
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> #}
+            <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+             <!-- jQuery 1.8 or later, 33 KB  // uncomment it for fotorama and fancybox -->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
             {# <!-- Fotorama from CDNJS, 19 KB -->
             <link  href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
             <script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> #}
-            {# <!-- Fancybox from CDNJS -->
+            <!-- Fancybox from CDNJS -->
             <link  href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css" rel="stylesheet">
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script> #}
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
             {# <!-- AOS Library -->
             <script src="https://unpkg.com/aos@next/dist/aos.js"></script>	
 	        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> #}
