working on news page

--- a/wp-content/themes/henderson/views/page-news-insights.twig
+++ b/wp-content/themes/henderson/views/page-news-insights.twig
@@ -11,6 +11,9 @@
 				<div class="filter-results container-top">
 					{{fn('do_shortcode','[searchandfilter query="1" action="show-results"]')}}
 				</div>
+				<div class="load-more-btn">
+				    {{fn('do_shortcode','[searchandfilter query="1" field="load_more"]')}}					
+				</div>
 			</div>
     </section>
 
